Migrate `StoreOrderStatus` to string-based methods for enum handling, replace SQL `VARCHAR` with `ENUM`, add backend constraints for status normalization, refactor `Orders` for dynamic fetch and role-based filters, remove `.idea` configs, and introduce `ErrorBoundary` with enhanced error handling across components.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TAVERN Stack - Tailwindcss + React + HeroUI + Vite + Typescript</title>
+    <title>Store Orders</title>
+    <link rel="shortcut icon" href="https://lib.mardens.com/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
